--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "NUS IVLE",
   "version": "1.0",
-  "manifest_version": 2,
+  "manifest_version": 1,
   "description": "National University of Singapore Integrated Virtual Learning Environment Chrome extension",
   "browser_action": {
     "default_icon": "/app/img/Lion.ico",
@@ -15,8 +15,9 @@
   ],
   "background": {
 	"page": "background.html"
-  }
+  },
   
+  "content_security_policy": "unsafe-eval"
 //  "icons": {
 //	"48": "Lion.ico"
 //  }
